[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "certbot-dns-asd"
version = "1.0.2"
authors = [{name = "Tim Small"}]
license = {text = "GPL 3.0"}
description = "All Secure Domains DNS API Authenticator plugin for Certbot"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = ["certbot", "zope.interface"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/tim-seoss/certbot-dns-asd"

[project.entry-points."certbot.plugins"]
dns-asd = "certbot_dns_asd.dns_asd:Authenticator"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}
